@@ -2674,6 +2674,10 @@ static MagickPassFail WritePTIFImage(const ImageInfo *image_info,Image *image)
   /*
     Create pyramid-encoded TIFF image.
   */
+  assert(image_info != (const ImageInfo *) NULL);
+  assert(image_info->signature == MagickSignature);
+  assert(image != (Image *) NULL);
+  assert(image->signature == MagickSignature);
   filter=TriangleFilter;
   if (image->is_monochrome)
     filter=PointFilter;
@@ -2681,26 +2685,33 @@ static MagickPassFail WritePTIFImage(const ImageInfo *image_info,Image *image)
   if (pyramid_image == (Image *) NULL)
     ThrowWriterException2(FileOpenError,image->exception.reason,image);
   do
-  {
-    pyramid_image->next=ResizeImage(image,pyramid_image->columns/2,
-      pyramid_image->rows/2,TriangleFilter,1.0,&image->exception);
-    if (pyramid_image->next == (Image *) NULL)
-      ThrowWriterException2(FileOpenError,image->exception.reason,image);
-    if ((!image->is_monochrome) && (image->storage_class == PseudoClass))
-      (void) MapImage(pyramid_image->next,image,False);
-    pyramid_image->next->x_resolution=pyramid_image->x_resolution/2;
-    pyramid_image->next->y_resolution=pyramid_image->y_resolution/2;
-    pyramid_image->next->previous=pyramid_image;
-    pyramid_image=pyramid_image->next;
-  } while ((pyramid_image->columns > 64) && (pyramid_image->rows > 64));
+    {
+      pyramid_image->next=ResizeImage(image,pyramid_image->columns/2,
+                                      pyramid_image->rows/2,TriangleFilter,
+                                      1.0,&image->exception);
+      if (pyramid_image->next == (Image *) NULL)
+        ThrowWriterException2(FileOpenError,image->exception.reason,image);
+      if ((!image->is_monochrome) && (image->storage_class == PseudoClass))
+        (void) MapImage(pyramid_image->next,image,False);
+      pyramid_image->next->x_resolution=pyramid_image->x_resolution/2;
+      pyramid_image->next->y_resolution=pyramid_image->y_resolution/2;
+      pyramid_image->next->previous=pyramid_image;
+      pyramid_image=pyramid_image->next;
+    } while ((pyramid_image->columns > 64) && (pyramid_image->rows > 64));
   while (pyramid_image->previous != (Image *) NULL)
     pyramid_image=pyramid_image->previous;
   /*
     Write pyramid-encoded TIFF image.
   */
   clone_info=CloneImageInfo(image_info);
-  /* (void) AddDefinitions(clone_info,"tiff:tile",&image->exception); */
   clone_info->adjoin=True;
+  strlcpy(clone_info->magick,"TIFF",MaxTextExtent);
+  strlcpy(image->magick,"TIFF",MaxTextExtent);
+  (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                        "Invoking \"%.1024s\" encoder, monochrome=%s, grayscale=%s",
+                        "TIFF",
+                        (image->is_monochrome != MagickFalse ? "True" : "False"),
+                        (image->is_grayscale != MagickFalse ? "True" : "False"));
   status=WriteTIFFImage(clone_info,pyramid_image);
   DestroyImageList(pyramid_image);
   DestroyImageInfo(clone_info);
